# Solana_Static_Analyzer

./: ARCHITECTURE.md  Cargo.toml  DSL_DOCUMENTATION.md  README.md  report.md
src/: main.rs
src/analyzer/: engine.rs  mod.rs  reporting.rs  span_utils.rs
src/analyzer/dsl/: builders.rs  mod.rs  query.rs
src/analyzer/dsl/filters/: mod.rs  solana.rs
src/analyzer/rules/: mod.rs
src/analyzer/rules/solana/: mod.rs
src/analyzer/rules/solana/high/: missing_owner_check.rs  missing_signer_check.rs  mod.rs  unsafe_code.rs
src/analyzer/rules/solana/high/missing_signer_check/: filters.rs  mod.rs  test.rs
src/analyzer/rules/solana/high/unsafe_code/: filters.rs  mod.rs
src/analyzer/rules/solana/low/: missing_error_handling.rs  mod.rs  naming_convention.rs
src/analyzer/rules/solana/low/anchor_instructions/: filters.rs  mod.rs
src/analyzer/rules/solana/low/missing_error_handling/: filters.rs  mod.rs
src/analyzer/rules/solana/medium/: division_by_zero.rs  duplicate_mutable_accounts.rs  mod.rs
src/analyzer/rules/solana/medium/division_by_zero/: filters.rs  mod.rs
src/analyzer/rules/solana/medium/duplicate_mutable_accounts/: filters.rs  mod.rs
src/analyzer/rules/solana/medium/owner_check/: filters.rs  mod.rs
src/ast/: json.rs  mod.rs  parser.rs
