[package]
name = "rust-solana-analyzer"
version = "0.1.0"
edition = "2024"
description = "Static analyzer for Solana/Anchor contracts in Rust"
authors = ["secoalba <git.seco@protonmail.com>"]

[dependencies]
# Rust syntax analysis
# full => full Rust features
#parsing => parse Rust code as text
#extra-traits => Debug, Eq traits for AST types
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and error handling
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

# File system utilities
walkdir = "2.3"
